--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
  <meta charset="utf-8"/>
  <meta name="viewport"content="width=device-width, initial-scale=1"/>
- <title>포트폴리오</title></head>
-<body>
- <h1 id="aList">최현우 포트폴리오 정리 </h1>
- <ul style="list-style-type:circle">
- <li><h3 id="first">첫번째 자바 프로젝트-콘솔창에 편의점 포스기 구현-</h3>
-   <ol>
+ <title> 최현우 포트폴리오 정리 </title></head>
+<style>
+  a:link {color:blue; text-decoration:none;} a:visited {color:purple; text-decoration:none;}
+  a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
+  </style></head>
+  <body>
+    <h1> 첫번째</h3>
+    <ul><hr/>
+      <li> 자바 프로젝트-콘솔창에 편의점 포스기 구현 </li>
+      <ol>
     <li><a href="chwdoit.github.io/first/javaConsol.html" target="_blank">실행 파일</a></li>
     <li><a href="chwdoit.github.io/first/javaConsolCapture.html" target="_blank">실행화면 캡처</a></li>
-   </ol>
-  </li>
+     </ol><hr/>
+   </ul>
