--- a/javaConsol.html
+++ b/javaConsol.html
@@ -1,1 +1,19 @@
-
+<!doctype html> <!-- Ex1_1.html -->
+<html><head><meta charset="utf-8"/><meta name="viewport"content="width=device-width, initial-scale=1"/>
+  
+    <title>최현우의 포트폴리오</title>
+  <style>
+  a:link {color:blue; text-decoration:none;} a:visited {color:purple; text-decoration:none;}
+  a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
+  </style>
+  </head>
+  <body>
+  <h2>소스코드</h2>
+  <h3>24.06.10 자바 클래스 별 소스코드</h3>
+  <img src="https://chwdoit.github.io/javaConsol1.png">
+  <img src="https://chwdoit.github.io/javaConsol2.png">
+  <img src="https://chwdoit.github.io/javaConsol3.png">
+  <img src="https://chwdoit.github.io/javaConsol4.png">
+  <img src="https://chwdoit.github.io/javaConsol5.png">
+  </body>
+</html>
