--- a/javaConsol.html
+++ b/javaConsol.html
@@ -9,11 +9,15 @@
   </head>
   <body>
   <h2>소스코드</h2>
-  <h3>24.06.10 자바 클래스 별 소스코드</h3>
+  <h3> Product </h3>
   <img src="https://chwdoit.github.io/javaConsol1.png">
+  <h3> CashRegister </h3>
   <img src="https://chwdoit.github.io/javaConsol2.png">
+  <h3> Inventory </h3>
   <img src="https://chwdoit.github.io/javaConsol3.png">
+  <h3> User </h3>
   <img src="https://chwdoit.github.io/javaConsol4.png">
+  <h3> store_Run</h3>
   <img src="https://chwdoit.github.io/javaConsol5.png">
   </body>
 </html>
